# upscaler

./: README.md  main.py  pyproject.toml  pytest.ini
LICENSES/: LICENSE.txt  waifu2x_LICENSE.txt
image_enhancement/common/: download_model.py
image_enhancement/scunet/: __init__.py  denoise.py  io.py
image_enhancement/scunet/model/: network_scunet.py
image_enhancement/upscaler/: io.py  model_specs.json  seam_blending.py  upscale.py
image_enhancement/upscaler/models/: loader.py  swin_unet.py
image_enhancement/upscaler/models/tests/: test_loader.py
image_enhancement/upscaler/utils/: resize.py
image_enhancement/upscaler/utils/tests/: test_convert.py  test_resize.py
upscaler/: __init__.py  model_specs.json  upscale.py
upscaler/models/: loader.py  swin_unet.py  wrapper.py
upscaler/models/tests/: test_loader.py
upscaler/utils/: __init__.py
upscaler/utils/tests/: test_resize.py
